fix Icon in CustomLink and wrap large anchors in PrivacyPolicy page

--- a/next.js/src/components/atoms/CustomLink/styles.module.scss
+++ b/next.js/src/components/atoms/CustomLink/styles.module.scss
@@ -7,5 +7,6 @@
     top: 10%;
     pointer-events: none;
     transform: scale(0);
+    z-index: 2;
   }
 }
