--- a/next.js/src/components/sections/privacy-policy/Content/styles.module.scss
+++ b/next.js/src/components/sections/privacy-policy/Content/styles.module.scss
@@ -59,6 +59,9 @@
       li {
         list-style-type: none;
       }
+      a {
+        overflow-wrap: anywhere;
+      }
       ol {
         counter-reset: ol;
         > li {
