--- a/next.js/src/global/global.scss
+++ b/next.js/src/global/global.scss
@@ -222,7 +222,7 @@ main {
       margin-bottom: 12px;
     }
 
-    svg {
+    > svg {
       height: 1.4em;
     }
   }
